some performance JDClassLoader
git-svn-id: svn://svn.jdownloader.org/jdownloader/trunk@10157 ebf7c1c2-ba36-0410-9fe8-c592906822b4